27. jpa 사용을 위한 dependency 추가와 설정

--- a/spring-boot-rest-api/src/main/resources/application.yml
+++ b/spring-boot-rest-api/src/main/resources/application.yml
@@ -8,13 +8,20 @@ logging:
 spring:
   messages:
     basename: messages
-  security:
-    user:
-      name: username
-      password: passw0rd
+#  security:
+#    user:
+#      name: username
+#      password: passw0rd
 
 management:
   endpoint:
     web:
       exposure:
         include: "*"
+
+jpa:
+  show-sql: true
+
+h2:
+  console:
+    enabled: true
